--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -21,8 +21,8 @@ const { title, description = "CoreCon - The Premier Conference for Core Engineer
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <title>{title} | CoreCon</title>
     <!-- Import global styles -->
-    <link rel="stylesheet" href="/src/styles/global.css" />
-    <link rel="stylesheet" href="/src/styles/variables.css" />
+    <link rel="stylesheet" href="./src/styles/global.css" />
+    <link rel="stylesheet" href="./src/styles/variables.css" />
   </head>
   <body>
     <Header />
