CSS not connecting

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,7 +8,7 @@ const teamMembers = [
   {
     name: "Jennifer Reyes",
     role: "Conference Chair",
-    bio: "Former VP of Engineering with 20+ years of experience in distributed systems and infrastructure scaling.",
+    bio: "Former VP of Engineering with over 20 years of experience in distributed systems and infrastructure scaling.",
     image: "/public/speaker2.jpg"
   },
   {
